# Kimera-VIO

./: CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
cmake/: kimera_vioConfig.cmake.in
docs/: BUILDING_GRAPH_TIME_CENTRIC.md
include/kimera-vio/backend/: VioBackend-definitions.h  VioBackend.h  VioBackendParams.h
include/kimera-vio/integration/: GraphTimeCentricBackendAdapter.h
params/EurocMono/: BackendParams.yaml  FrontendParams.yaml
params/GrAcoGndMonoXfeat/: BackendParams.yaml  FrontendParams.yaml  ImuParams.yaml  LcdParams.yaml  LeftCameraParams.yaml
src/backend/: VioBackend.cpp  VioBackendModule.cpp  VioBackendParams.cpp
src/dataprovider/: DataProviderModule.cpp
src/integration/: GraphTimeCentricBackendAdapter.cpp
src/pipeline/: MonoImuPipeline.cpp
tests/: CMakeLists.txt  testGraphTimeCentricBackendAdapter.cpp
